feat: add superadmin user list API
