# backend/app/Http/Resources/UserCollection.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\ResourceCollection;
+
+class UserCollection extends ResourceCollection
+{
+    /** @var class-string<UserResource> */
+    public $collects = UserResource::class;
+
+    /**
+     * @param  array<string, mixed>  $paginated
+     * @param  array{links: array<string, mixed>, meta: array<string, mixed>}  $default
+     * @return array{meta: array<string, mixed>}
+     */
+    public function paginationInformation(Request $request, array $paginated, array $default): array
+    {
+        return [
+            'meta' => [
+                'current_page' => $default['meta']['current_page'],
+                'last_page' => $default['meta']['last_page'],
+                'per_page' => $default['meta']['per_page'],
+                'total' => $default['meta']['total'],
+            ],
+        ];
+    }
+}
