# backend/routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\BookController;
+use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
 
 Route::prefix('v1')->group(function (): void {
@@ -12,5 +13,6 @@ Route::prefix('v1')->group(function (): void {
         Route::get('me', [AuthController::class, 'me']);
         Route::post('auth/logout', [AuthController::class, 'logout']);
         Route::apiResource('books', BookController::class);
+        Route::get('users', [UserController::class, 'index'])->name('users.index');
     });
 });
